# frankenstein

./: .dvcignore  .gitignore  data.dvc  pyproject.toml  run.py  test.ipynb
.dvc/: config
.fleet/: run.json
bash_scripts/: pull_data.sh  save_data.sh
configs/: process_data.yaml
configs/clip/: general.yaml  text.yaml  vision.yaml
notebooks/: check_data.ipynb  image_process_examples.ipynb
src/: __init__.py  process_data.py  utils.py
